--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,3 +129,8 @@ name {
 span.highlight {
   background-color: #ffffd0;
 }
+
+mark {
+  background-color: rgb(68, 76, 197);
+  color: rgb(255, 255, 255);
+}
