--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,8 +202,18 @@ code {
 .navbar {
   background-color: #f8f8f8;
   overflow: hidden;
-  text-align: center;
-  padding: 10px 0;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar .nav-left {
+  display: flex;
+}
+
+.navbar .nav-right {
+  display: flex;
 }
 
 .navbar a {
